@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.111 2008-05-09 18:38:40 yselkowitz Exp $
+# $Id: cygport.in,v 1.112 2008-05-16 17:49:10 yselkowitz Exp $
 #
 ################################################################################
 
@@ -1759,9 +1759,9 @@ __pkg_diff() {
 	local difflevel;
 	local exclude;
 
-	default_excludes="CYGWIN-PATCHES aclocal.m4~ aclocal.m4t autom4te.cache \
-		config.cache config.log config.status config.h config.h.in
-		ABOUT-NLS Makefile.in.in Makevars.template *SlackBuild* *.egg-info \
+	default_excludes="CYGWIN-PATCHES aclocal.m4~ aclocal.m4t autom4te.cache
+		config.cache config.log config.status config.h *config.h.in
+		ABOUT-NLS Makefile.in.in Makevars.template *SlackBuild* *.egg-info
 		*.class *.pyc *.mo *.gmo *.orig *.rej *.spec *.temp *~ *.stackdump";
 
 	case ${PN} in
