@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (__pkg_diff): Exclude *config.h.in.
+
 	* lib/gtk2-perl.cygclass: Add Mozilla-DOM and Gtk2-MozEmbed.
 
 	* bin/cygport.in (__prepdoc): Accept RESTRICT=postinst-doc.
